# ecommerce_product_assistant

./: Dockerfile  get-lib_versions.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
data/: product_reviews.csv
infra/: eks-with-ecr.yaml
k8/: deployment.yaml  service.yaml
notebook/: test.ipynb
prod_assistant/config/: config.yaml
prod_assistant/etl/: data_ingestion.py  data_scrapper.py
prod_assistant/evaluation/: ragas.py
prod_assistant/mcp_servers/: client.py
prod_assistant/retriever/: retrieval.py
prod_assistant/router/: main.py
prod_assistant/utils/: format.py  model_loader.py
prod_assistant/workflow/: agentic_rag_workflow.py  agentic_workflow_with_mcp.py  normal_generation_workflow.py
